--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
+<!-- @format -->
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Learning JavaScript</title>
-</head>
-<body>
+    <!-- Link the script -->
+  </head>
+  <body>
+    <div>Name: <input id="name" type="text" /></div>
+    <div>Age: <input id="age" type="number" /></div>
+    <button type="button" onclick="printNameAge()">Submit</button>
+
+    <p id="output">Your Value</p>
+
     <h1>Sponsored by @Jacob & Alex</h1>
-</body>
+    <script src="main.js"></script>
+  </body>
 </html>
