--- a/index.html
+++ b/index.html
@@ -6,16 +6,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Learning JavaScript</title>
-    <!-- Link the script -->
-  </head>
-  <body>
+</head>
+<body>
+    <!-- Inputs, Set the id so that we can get the elements by id in the js -->
     <div>Name: <input id="name" type="text" /></div>
     <div>Age: <input id="age" type="number" /></div>
+    <!-- Submit button, onClick -> runs the function -->
     <button type="button" onclick="printNameAge()">Submit</button>
-
+    <!-- Element that gets updated by the button function -->
     <p id="output">Your Value</p>
-
+    
     <h1>Sponsored by @Jacob & Alex</h1>
+    <!-- Link the script, at the bottom so the html can load and we can read the elements in our js file -->
     <script src="main.js"></script>
   </body>
 </html>
